--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="app_name">timer2</string>
-    <string name="greeting_message">Hello %1$s!</string>
+    <string name="greeting_message">How r u %1$s!</string>
 </resources>
